# zenref

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.rst  README.md  README.rst  main.py  netlify.toml  pyproject.toml  requirements.txt
docs/source/: assists.rst  basic_scoring.rst  clockwise_play.rst  conf.py  cutting_the_track_and_altering_game_flow_penalties.rst  document_change_summary.rst  duties_skills_and_ethics.rst  expulsions_and_fouling_out.rst  game_concepts.rst  illegal_contact_and_multiplayer_block_penalties.rst  illegal_positioning_and_illegal_procedure_penalties.rst  illegal_target_and_blocking_zone_penalties.rst  index.rst  inside_pack_referees.rst  introduction_to_penalties.rst  jammer_referees.rst  junior_derby_gameplay.rst  junior_derby_gear_checks.rst  no_pack_situations.rst  outside_pack_referees.rst  pack_formation.rst  passing_the_star.rst  safety_gear_skates_and_accessories.rst  the_penalty_box.rst  (+6 more)
source/: advanced_scoring.rst  assists.rst  basic_scoring.rst  changelog.rst  conf.py  cutting_the_track_and_altering_game_flow_penalties.rst  duties_skills_and_ethics.rst  game_concepts.rst  illegal_contact_and_multiplayer_block_penalties.rst  illegal_positioning_and_illegal_procedure_penalties.rst  index.rst  inside_pack_referees.rst  introduction_to_penalties.rst  junior_derby_gear_checks.rst  outside_pack_referees.rst  passing_the_star.rst  referees_all_positions.rst  skater_concerns_and_official_reviews.rst  the_head_referee.rst  the_penalty_box.rst  three_types_of_penalties.rst  unsporting_conduct_penalties.rst  whistles.rst
(+31 files in other folders)
