[project]
name = "zenref"
version = "1.0"
description = "The Zen of Reffing Roller Derby"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-last-updated-by-git>=0.3.8",
]

[dependency-groups]
dev = [
    "sphinx-lint>=1.0.1",
]
