[project]
name = "zenref"
version = "1.0"
description = "The Zen of Reffing Roller Derby"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "furo>=2025.9.25",
    "sphinx>=8.2.3",
    "sphinx-last-updated-by-git>=0.3.8",
]

[dependency-groups]
dev = [
    "sphinx-autobuild>=2025.8.25",
    "sphinx-lint>=1.0.1",
]
